# Rt-from-wastewater

./: README.md  pyproject.toml
src/: model.py
src/Rt-from-wastewater/: dist.py  distributions.py  model.py
src/rt_from_wastewater/: distributions.py
